# caching-research

./: LICENSE  README.md  docker-compose.yml  pytest.ini  requirements-test.txt  run_tests.sh
article-service/: Dockerfile  init.sql  main.py  pyproject.toml  requirements.txt
article-service/application/use_cases/: create_article.py  get_article.py
article-service/domain/entities/: article.py
article-service/domain/ports/: article_repository.py  cache_strategy.py
article-service/infrastructure/repositories/: postgres_article_repo.py
article-service/infrastructure/repositories/cache_strategies/: cache_aside.py  read_through.py  write_behind.py  write_through.py
article-service/presentation/: api.py
article-service/presentation/controllers/: article_controller.py
test-results/: strategies_comparison.json
tests/: test_perfomance.py  test_simple.py  test_strategies.py
tests/test-results/: strategies_comparison.json
